@@ -1,5 +1,9 @@
 2026-02-02  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el (eglot-nix-mode): New global minor mode.
+
+2026-02-02  Zhengyi Fu  <i@fuzy.me>
+
 	* init.el (proced-format-args@nix): New advice.
 
 2026-01-30  Zhengyi Fu  <i@fuzy.me>
